# paragraph2actions

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml  tests.yaml
paragraph2actions/: action_string_converter.py  actions.py  analysis.py  internal_translation_utils.py  misc.py  sentence_postprocessor.py  translator.py  utils.py
paragraph2actions/augmentation/: action_attribute_augmenter.py  compound_name_augmenter.py  duration_augmenter.py  substitution_augmenter.py  temperature_augmenter.py
paragraph2actions/postprocessing/: action_postprocessor.py  duplicate_actions_postprocessor.py  filter_postprocessor.py  noaction_postprocessor.py  purify_postprocessor.py  same_temperature_postprocessor.py
paragraph2actions/scripts/: calculate_metrics.py  create_sentencepiece_tokenizer.py  generate_samples_to_annotate.py  tokenize_with_sentencepiece.py  translate_actions.py
src/paragraph2actions/: __init__.py  action_string_converter.py  actions.py  analysis.py  conversion_utils.py  converter_interface.py  data_augmentation.py  data_splitting.py  default_converters.py  internal_translation_utils.py  introspection.py  misc.py  paragraph_translator.py  readable_converter.py  repr_converter.py  sentence_postprocessor.py  sentencepiece_tokenizer.py  translator.py  utils.py
src/paragraph2actions/augmentation/: action_attribute_augmenter.py  augmenter.py  compound_name_augmenter.py  compound_quantity_augmenter.py  duration_augmenter.py  temperature_augmenter.py
src/paragraph2actions/postprocessing/: drysolution_postprocessor.py  duplicate_actions_postprocessor.py  filter_postprocessor.py  initial_makesolution_postprocessor.py  noaction_postprocessor.py  postprocessor_combiner.py  purify_postprocessor.py  same_temperature_postprocessor.py  wait_postprocessor.py
src/paragraph2actions/scripts/: calculate_metrics.py  create_sentencepiece_tokenizer.py  generate_samples_to_annotate.py  tokenize_with_sentencepiece.py  translate_actions.py
src/paragraph2actions/sentence_splitting/: cde_splitter.py  dot_splitter.py  sentence_splitter.py
test_data/: src-test.txt  src-train.txt  src-valid.txt  tgt-test.txt  tgt-train.txt  tgt-valid.txt
