[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "chemdataextractor.*",
    "nltk.*",
    "onmt.*",
    "sentencepiece.*",
    "textdistance.*",
]
ignore_missing_imports = true
