[metadata]
name = paragraph2actions
version = attr: paragraph2actions.__version__
description = Extraction of actions from experimental procedures
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rxn4chemistry/paragraph2actions
project_urls =
    Repository = https://github.com/rxn4chemistry/paragraph2actions
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires =
    attrs>=19.1.0
    click>=7.0
    nltk>=3.4.5
    rxn-onmt-utils>=1.1.0
    sentencepiece>=0.1.83
    textdistance>=4.1.5

[options.packages.find]
where = src

[options.package_data]
paragraph2actions =
    py.typed

[options.extras_require]
dev =
    bump2version>=1.0.1
    black>=23.1.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    types-setuptools>=57.4.14

[flake8]
extend-ignore = E203, E501
